OSR compilation fails with "assert(__the_thread__->can_call_java()) failed: can not load classes with compiler thread"

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P4
    • 10
    • Affects Version/s: 10
    • Component/s: hotspot
    • b33

      # Internal Error (/oracle/jdk_hs/open/src/hotspot/share/classfile/systemDictionary.cpp:253), pid=27672, tid=27702
      # assert(__the_thread__->can_call_java()) failed: can not load classes with compiler thread: class=java/lang/LinkageError, classloader=null

      Current CompileTask:
      C2: 497 107 % compiler.linkage.OSRWithBadOperandStack::test @ 2 (18 bytes)

      Stack: [0x00007efe1804e000,0x00007efe1814f000], sp=0x00007efe1814a920, free space=1010k
      Native frames: (J=compiled Java code, A=aot compiled Java code, j=interpreted, Vv=VM code, C=native code)
      V [libjvm.so+0x1889b1c] VMError::report_and_die(int, char const*, char const*, __va_list_tag*, Thread*, unsigned char*, void*, void*, char const*, int, unsigned long)+0x18c
      V [libjvm.so+0x188a94f] VMError::report_and_die(Thread*, char const*, int, char const*, char const*, __va_list_tag*)+0x2f
      V [libjvm.so+0xb669a2] report_vm_error(char const*, int, char const*, char const*, ...)+0x112
      V [libjvm.so+0x1797fe3] SystemDictionary::resolve_or_null(Symbol*, Handle, Handle, Thread*)+0x3f3
      V [libjvm.so+0x17981fe] SystemDictionary::resolve_or_fail(Symbol*, Handle, Handle, bool, Thread*)+0x1e
      V [libjvm.so+0xca4177] Exceptions::new_exception(Thread*, Symbol*, Symbol*, JavaCallArguments*, Handle, Handle)+0xa7
      V [libjvm.so+0xca4905] Exceptions::new_exception(Thread*, Symbol*, Symbol*, JavaCallArguments*, Handle, Handle, Handle)+0x35
      V [libjvm.so+0xca5818] Exceptions::new_exception(Thread*, Symbol*, char const*, Handle, Handle, Handle, Exceptions::ExceptionMsgToUtf8Mode)+0x4c8
      V [libjvm.so+0xca5bfa] Exceptions::new_exception(Thread*, Symbol*, char const*, Exceptions::ExceptionMsgToUtf8Mode)+0x22a
      V [libjvm.so+0xe2775f] GenerateOopMap::verify_error(char const*, ...)+0x17f
      V [libjvm.so+0xe299c1] GenerateOopMap::do_method(int, int, int, int)+0x1e1
      V [libjvm.so+0xe2cfe4] GenerateOopMap::interp_bb(BasicBlock*)+0x124
      V [libjvm.so+0xe2df2c] GenerateOopMap::do_interpretation()+0xdc
      V [libjvm.so+0xe2e32b] GenerateOopMap::compute_map(Thread*)+0x36b
      V [libjvm.so+0x14ed7d9] OopMapForCacheEntry::compute_map(Thread*)+0xc9
      V [libjvm.so+0x14ef62b] OopMapCacheEntry::fill(methodHandle const&, int)+0x12b
      V [libjvm.so+0x14f0c07] OopMapCache::compute_one_oop_map(methodHandle const&, int, InterpreterOopMap*)+0x127
      V [libjvm.so+0x954f71] ciMethod::live_local_oops_at_bci(int)+0xc1
      V [libjvm.so+0x156c8d1] Parse::load_interpreter_state(Node*)+0x541
      V [libjvm.so+0x1573bce] Parse::Parse(JVMState*, ciMethod*, float)+0xa5e
      V [libjvm.so+0x8ca28c] ParseGenerator::generate(JVMState*)+0x1dc
      V [libjvm.so+0xac61aa] Compile::Compile(ciEnv*, C2Compiler*, ciMethod*, int, bool, bool, bool, DirectiveSet*)+0xfda
      V [libjvm.so+0x8c8662] C2Compiler::compile_method(ciEnv*, ciMethod*, int, DirectiveSet*)+0x2f2
      V [libjvm.so+0xad140b] CompileBroker::invoke_compiler_on_method(CompileTask*)+0x3eb
      V [libjvm.so+0xad2091] CompileBroker::compiler_thread_loop()+0x291
      V [libjvm.so+0x17e92fe] JavaThread::thread_main_inner()+0x24e
      V [libjvm.so+0x17e957c] JavaThread::run()+0x1bc
      V [libjvm.so+0x150ce5a] thread_native_entry(Thread*)+0xfa
      C [libpthread.so.0+0x76ba] start_thread+0xca

            Assignee:
            Tobias Hartmann
            Reporter:
            Tobias Hartmann
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved: