8190797: OSR compilation fails with "assert(__the_thread__->can_call_java()) failed: can not load classes with compiler thread"

Bail out with a meaningful error message in case we cannot throw a Java exception.

Reviewed-by: kvn, dholmes